# local-dream-flux2

./: BUILD_GUIDE.md  CLAUDE.md  convert_bn_stats.py  export_flux2_klein_xnnpack.py
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  CMakeLists_flux2.txt  CMakePresets.json  build.sh
app/src/main/cpp/src/: FlowMatchEulerScheduler.hpp  main_flux2.cpp
app/src/main/java/io/github/xororz/localdream/data/: HistoryManager.kt  Model.kt  Preferences.kt
app/src/main/java/io/github/xororz/localdream/service/: BackendService.kt  BackgroundGenerationService.kt  ModelDownloadService.kt
app/src/main/java/io/github/xororz/localdream/ui/screens/: CropImageScreen.kt  ModelListScreen.kt  ModelRunScreen.kt  UpscaleScreen.kt
app/src/main/res/values/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-zh/: strings.xml
